chapter 5 – entities and datafixtures added

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,8 +1,14 @@
-my:
-    resource: "@MyBundle/Controller/"
-    type:     annotation
-    prefix:   /
+
+#my:
+    #resource: "@MyBundle/Controller/"
+    #type:     annotation
+    #prefix:   /
+
 
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+
+app_about_more:
+  path:     /about/{name}/details
+  defaults: { _controller: AppBundle:About:details}
