--- a/composer.json
+++ b/composer.json
@@ -30,12 +30,20 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "twig/twig": "^1.0||^2.0",
-        "friendsofsymfony/user-bundle": "v2.0.0-beta1"
+        "friendsofsymfony/user-bundle": "v2.0.0-beta1",
+        "codeception/codeception": "^2.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0",
-        "phpunit/phpunit":"^5.7.15"
+        "phpunit/phpunit":"^5.7.15",
+        "behat/behat": "dev-master",
+        "behat/mink-extension": "dev-master",
+        "behat/mink": "dev-master",
+        "behat/mink-selenium2-driver": "dev-master",
+        "behat/symfony2-extension": "dev-master",
+        "behat/mink-browserkit-driver": "dev-master",
+        "behat/mink-goutte-driver": "dev-master"
     },
     "scripts": {
         "symfony-scripts": [
