--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -7,6 +7,9 @@
 class_name: AcceptanceTester
 modules:
     enabled:
+        #- WebDriver:
+         #     url: http://localhost:8000
+          #    browser: firefox
         - PhpBrowser:
-            url: http://localhost/myapp
+           url: http://localhost:8000
         - \Helper\Acceptance
