--- a/tests/unit.suite.yml
+++ b/tests/unit.suite.yml
@@ -7,3 +7,8 @@ modules:
     enabled:
         - Asserts
         - \Helper\Unit
+        - Db
+        - Symfony:
+            environment: 'test'
+        - Doctrine2:
+            depends: Symfony
